test_files/s_cproc/macro_object_expand/test_025/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_025/i.input:1:15: error: '#' is not followed by a macro parameter
 #define VA(a)#/__VA_ARGS__
               ^
